--- a/at3_fashionMnistKNN.ipynb
+++ b/at3_fashionMnistKNN.ipynb
@@ -504,7 +504,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.title('Elbow Graph')\n",
+        "plt.title('grafic')\n",
         "plt.xlabel('K')\n",
         "plt.ylabel('error_rate')\n",
         "sns.lineplot(x=range(1,30),y=test_error_rate, color='red')"
@@ -523,7 +523,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<Axes: title={'center': 'Elbow Graph'}, xlabel='K', ylabel='error_rate'>"
+              "<Axes: title={'center': 'graf'}, xlabel='K', ylabel='error_rate'>"
             ]
           },
           "metadata": {},
